--- a/styles.css
+++ b/styles.css
@@ -1,144 +1,156 @@
-.navbar {
-    background-color: #252733 !important;
+.form-recruitment {
+    display: flex;
+    justify-content: space-between;
 }
 
-.navbar-title {
-    font-family: 'Mulish';
+.nav-header {
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.neuron-logo {
+    width: 128px;
+    margin: 8px;
+    padding-left: 8px;
+    padding-top: 4px;
+}
+
+.recruitment {
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    height: 94vh;
+}
+
+.container-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+    height: 100%;
+}
+
+.text-danger {
+    color: #e53935 !important
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-control {
+    padding: 12px 12px;
+    margin: 8px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 12px;
+}
+
+.btn-primary {
+    background-color: #1e88e5;
+    border-color: #1e88e5;
+    color: #fff;
+    border: none;
+    padding: 12px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    margin: 8px 0;
+    cursor: pointer;
+    border-radius: 4px;
     font-weight: bold;
-    color: white !important;
 }
 
-.card {
-    background-color: transparent !important;
+.btn.btn-primary:hover {
+    background: #1565c0 !important;
 }
 
-.card-main {
-    border-color: white !important;
-    box-shadow: rgba(0, 0, 0, 0.07) 0px 2px 4px;
-
+.recruitmen-image {
+    width: 50%;
+    height: 100%;
 }
 
-.card-unit:hover {
-    opacity: 0.6;
+.starlid-illustration {
+    width: 130%;
+    height: 100%;
 }
 
-.card-icon {
-    font-size: 24px !important;
+.recruitment-form-dialog {
+    width: 58%;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 32px;
+    margin: auto;
 }
 
-.card h3 {
-    color: white !important;
-    font-family: 'Mulish';
-    font-weight: bold;
+.web-recruitment {
+    height: 100%;
 }
 
-.card p {
-    color: white !important;
-    font-family: 'Mulish';
-    font-weight: bold;
+.footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    font-size: 32px;
+    margin: 24px 32px;
+    color: #424242 !important;
 }
 
-.unit-1,
-.category-1 {
-    background-color: #3b76ef !important;
-    border-color: #3b76ef !important;
+.copyright {
+    text-align: center;
+    font-size: 16px;
+    color: #424242 !important;
+    text-decoration: none;
 }
 
-.unit-2,
-.spiral-case {
-    background-color: #63c7ff !important;
-    border-color: #63c7ff !important;
+.copyright a:hover {
+    color: #1e88e5 !important;
 }
 
-.unit-3,
-.intake-rack {
-    background-color: #a66dd4 !important;
-    border-color: #a66dd4 !important;
-}
-
-.monthly,
-.category-2 {
-    background-color: #6dd4b1 !important;
-    border-color: #6dd4b1 !important;
-}
-
-.yearly,
-.trashboom-2 {
-    background-color: #d63384 !important;
-    border-color: #d63384 !important;
-}
-
-.trashboom-1 {
-    background-color: #d6ad33 !important;
-    border-color: #d6ad33 !important;
-}
-
-.category-3 {
-    background-color: #E9ECEF !important;
-    border-color: #E9ECEF !important;
+.link-sosmed:hover {
+    color: #1e88e5 !important;
 }
 
 body {
-    background-color: #f7faff !important;
+    margin: 0px;
+    font-family: 'Source Sans Pro';
 }
 
-h5 {
-    margin-left: 12px;
+a {
+    text-decoration: none;
+    color: #424242;
 }
 
-.daily-bar,
-.yearly-bar {
-    animation: bardaily 3s normal forwards;
+h2 {
+    margin-bottom: 2px;
 }
 
-.monthly-bar {
-    animation: barmonthly 3s normal forwards;
+p {
+    margin-top: 10px;
+    font-size: 14px;
 }
 
-@keyframes bardaily {
-    0% {
-        width: 0;
+
+@media screen and (max-width: 1200px) {
+    .recruitmen-image {
+        display: none;
     }
 
-    100% {
-        width: 93%;
-    }
-}
-
-@keyframes barmonthly {
-    0% {
-        width: 0;
+    .container-form {
+        width: 100%;
     }
 
-    100% {
-        width: 95%;
+    .recruitment-form-dialog {
+        width: 42%;
     }
 }
 
-.monthly-ops {
-    animation: monthlyops 3s normal forwards;
-}
-
-.yearly-ops {
-    animation: yearlyops 3s normal forwards;
-}
-
-@keyframes monthlyops {
-    0% {
-        width: 0;
-    }
-
-    100% {
-        width: 70%;
-    }
-}
-
-@keyframes yearlyops {
-    0% {
-        width: 0;
-    }
-
-    100% {
-        width: 73%;
+@media screen and (max-width: 480px) {
+    .recruitment-form-dialog {
+        width: 80vw;
+        height: 100%;
     }
 }
